--- a/public/home.html
+++ b/public/home.html
@@ -44,7 +44,7 @@
     <main>
       <div class="container-lg">
         <div class="row">
-          <div class="col d-flex mt-4 justify-content-start align-items-center">
+          <div class="col-4 d-flex mt-4 justify-content-start align-items-center">
               <i class="bi bi-cash-coin color-primary icon-datail"></i>
               <span class="fs-2" id="total">R$ 0,00</span>
           </div>
