--- a/public/transactions.html
+++ b/public/transactions.html
@@ -43,7 +43,7 @@
         <div class="row">
           <div class="col-8 d-flex mt-4 justify-content-start align-items-center">
             <div>
-              <i class="bi bi-currency-exchange color-primary icon-detail"></i>
+              <i class="bi bi-currency-exchange color-primary icon-datail"></i>
               <span class="fs-2 bg-white">Lançamentos</span>
             </div>
           </div>
